--- a/Districts/kottayam.html
+++ b/Districts/kottayam.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palakkad</title>
+    <title>Kottayam</title>
     <link rel="stylesheet" href ="dist.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
     <div class="container py-4">
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
-            <h2 class="display-5 fw-bold text-light">Palakkad</h2>
+            <h2 class="display-5 fw-bold text-light">Kottayam</h2>
             <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
           </div>
         </div>
@@ -65,13 +65,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/sv1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/V1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/sv2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/V2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/sv3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/V3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,8 +85,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Silent Valley</h5>
-                      <p class="card-text">Silent Valley National Park in Palakkad has some rare species of flora and fauna, among which the most famous are the lion tailed macaques. It is the core of the Nilgiri Biosphere Reserve and is part of the Nilgiri Sub-Cluster Western Ghats World Heritage Site, recognised by UNESCO in 2007.</p>
+                      <h5 class="card-title">Vagamon</h5>
+                      <p class="card-text">Vagamon is mainly a hill station with an overtone of green. Listed by the National Geographic Traveler their directory of the "50 most attractive places to visit in India", Vagamon has lush green hills, breathtaking ravines, meandering rivulets, small waterfalls and pine forests. Tourists can also try paragliding and other activities here.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/mlmp2.webp" class="d-block w-100" alt="...">
+                            <img src="../images/FK1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/mlmp1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/FK2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/mlmp3.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/FK3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,8 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Malampuzha Dam</h5>
-                      <p class="card-text">The longest dam in Kerala is situated in the scenic hills of the Western Ghats. The dam is 355 feet high and crosses the Malampuzha River. The Malampuzha gardens, situated nearby are the only rock gardens in South India. Other attractions include the Yakshi garden, chessboard park, Japanese garden etc.</p>
+                      <h5 class="card-title">Fort Kochi</h5>
+                      <p class="card-text">Fort Kochi, is a locality 16 km from Cochin city and takes its name from Fort Manuel of Cochin, the first European fort on Indian soil. This is part of a handful of water-bound islands and islets toward the south-west of mainland Kochi, and collectively known as Old Cochin or West Kochi. Its colourful streets, churches, synagogues, hotels and beaches make it a famous tourist destination. The chinese fish nets here are a must see.</p>
                     </div>
                 </div>
             </div>
@@ -139,13 +139,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/nlmp1.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/HP1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/nlmp2.jpg" class="d-block w-100" alt="...">
+                            <img src="../images/HP2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/nlmp3.webp" class="d-block w-100" alt="...">
+                            <img src="../images/HP3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -159,8 +159,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Nelliampathy Hills</h5>
-                      <p class="card-text">Lying in the lap of the 0Western Ghats, Nelliyampathy Hills are decorated with a wonderful sight of tea, coffee, cardamom and Orange plantations. Often called ‘Poor man’s Ooty’, it is also famous for the trekking trails and the amazing climate.</p>
+                      <h5 class="card-title">Hill Palace</h5>
+                      <p class="card-text">Hill  Palace museum is the largest archeological museum in the state and was the imperial administrative office and official residence of the Cochin Maharaja. Built in 1865, the palace complex consists of 49 buildings in the traditional architectural style, spreading across 54 acres. The complex has an archaeological museum, a heritage museum, a deer park, a pre-historic park and a children’s park.</p>
                     </div>
                 </div>
             </div>
