--- a/Districts/pathanamthitta.html
+++ b/Districts/pathanamthitta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kottayam</title>
+    <title>Pathanamthitta</title>
     <link rel="stylesheet" href ="dist.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
     <div class="container py-4">
         <div class="p-4 mb-6 bg-dark rounded-3">
           <div class="container-fluid py-5">
-            <h2 class="display-5 fw-bold text-light">Kottayam</h2>
+            <h2 class="display-5 fw-bold text-light">Pathanamthitta</h2>
             <p class="col-md-8 fs-6 text-light">The state of Kerala is divided into 14 districts. Each district, with its plethora of destinations and rich culture, attracts tourists from all around the world. We've made a list of destinations from each district, which we know you'll enjoy.</p>
           </div>
         </div>
@@ -86,7 +86,7 @@
 
                     <div class="card-body">
                       <h5 class="card-title">Vagamon</h5>
-                      <p class="card-text">Vagamon is a hill station with an overtone of green. Listed by the National Geographic Traveler their directory of the "50 most attractive places to visit in India", Vagamon has lush green hills, breathtaking ravines, meandering rivulets, small waterfalls and pine forests. Tourists can also try paragliding and other activities here.</p>
+                      <p class="card-text">Vagamon is mainly a hill station with an overtone of green. Listed by the National Geographic Traveler their directory of the "50 most attractive places to visit in India", Vagamon has lush green hills, breathtaking ravines, meandering rivulets, small waterfalls and pine forests. Tourists can also try paragliding and other activities here.</p>
                     </div>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../images/pdt1.jpeg" class="d-block w-100" alt="...">
+                            <img src="../images/FK1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/pdt2.jpeg" class="d-block w-100" alt="...">
+                            <img src="../images/FK2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="../images/pdt3.jpeg" class="d-block w-100" alt="...">
+                            <img src="../images/FK3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -122,8 +122,8 @@
                       </div>
 
                     <div class="card-body">
-                      <h5 class="card-title">Panachikkad Temple</h5>
-                      <p class="card-text">The Panachikkadu Temple, also known as the Dakshina Mookambika (Mookambika of the South) is one of the most prominent Saraswati temples for devotees in Kerala even though the main deity of the temple is Lord Vishnu.There are lots of interesting legends about this temple and festivals like Navrathri are celebrated with much pomp.</p>
+                      <h5 class="card-title">Fort Kochi</h5>
+                      <p class="card-text">Fort Kochi, is a locality 16 km from Cochin city and takes its name from Fort Manuel of Cochin, the first European fort on Indian soil. This is part of a handful of water-bound islands and islets toward the south-west of mainland Kochi, and collectively known as Old Cochin or West Kochi. Its colourful streets, churches, synagogues, hotels and beaches make it a famous tourist destination. The chinese fish nets here are a must see.</p>
                     </div>
                 </div>
             </div>
